package hu.bme.mario.model;

public class BaseBlock extends Block{
}
