package hu.bme.mario.model;

import java.io.Serializable;

public abstract class Block implements Serializable {
}
